# ipc-bench

./: CMakeLists.txt  LICENSE  README.md  client-server-tcp-flow.txt  setup.sh
source/: CMakeLists.txt
source/common/: .fuse_hidden0000001000000001  CMakeLists.txt  arguments.h  benchmarks.c  common.h  process.c  tuntcp.c  tuntcp.h
source/shm/: CMakeLists.txt  client.c  server.c
